# learn_spark

./: .env-template  .gitignore  README.md  pyproject.toml
hooks/: pre-commit.template
learn_spark/: config.py
learn_spark/book/: word-count.py
learn_spark/customers/: readme.md  spent-by-customer.py
learn_spark/friends/: friends-by-age.py  readme.md
learn_spark/movies/: ratings-counter.py  readme.md
learn_spark/ratings_counter/: ratings-counter.py
learn_spark/temp-1800s/: min-temps.py
learn_spark/utils/: runner.py  sorting.py
tests/: test_learn_spark.py
